# arc-cpp-skmotion

./: .gitignore  CMakeLists.txt  build.bat  build.sh  test.bat
.lizs/pointel/cmds/: build.liz
include/: expected.h  recorder.h  streamer.h  userface.h
src/: main.cpp  recorder.cpp  streamer.cpp  userface.cpp
